env/code_58e248ec7cf92/stderr.txt
main.java:9: error: cannot find symbol
		System.println("hello");
		      ^
  symbol:   method println(String)
  location: class System
1 error
